<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">peseus</string>
    <string name="action_settings">Settings</string>

    <!-- api reader tips -->
    <string name="api_account">账号</string>
    <string name="api_biz">业务</string>
    <string name="api_poi">POI</string>
    <string name="api_other">其他</string>
    <string name="api_http">网络</string>
    <string name="api_dbcache">数据库缓存</string>

    <!-- pull to refresh listview tips -->
    <string name="refresh_pull_down_tip">下拉刷新…</string>
    <string name="refresh_release_tip">松开刷新…</string>
    <string name="loading_tip">正在载入…</string>

    <!-- 账号接口提示 -->
    <string name="account_input_obd_hint">OBD硬件序列号</string>
    <string name="account_input_sid_hint">车辆标示码</string>
    <string name="account_input_email_hint">邮箱</string>
    <string name="account_input_name_hint">用户名</string>
    <string name="account_input_pwd_hint">密码</string>
    <string name="account_input_repwd_hint">重新输入密码</string>
    <string name="account_input_manufacturer_hint">制造商</string>
    <string name="account_input_brand_hint">品牌</string>
    <string name="account_input_model_hint">型号</string>
    <string name="account_input_engine_hint">排量</string>
    <string name="upload_file_hint">上传文件名</string>
    <string name="btn_update_tip">更新用户信息</string>
    <string name="btn_register_tip">注册</string>
    <string name="btn_uploadprofile_tip">上传头像</string>

    <!-- 业务接口提示 -->
    <string name="biz_mycar_upload_hint">行车数据上传</string>
    <string name="biz_mycar_upload_hint">获取行车数据</string>
    <string name="biz_mycar_diagnose_hint">车况诊断</string>
    <string name="biz_oilbill_add_hint">添加加油记录</string>
    <string name="biz_oilbill_get_hint">行车数据上传</string>

    <!-- 其他接口提示 -->
    <string name="btn_config_tip">配置</string>
    <string name="btn_feedback_tip">反馈</string>

    <!-- http request reader tips -->
    <string name="method_type_get">GET</string>
    <string name="method_type_post">POST</string>
    <string name="method_type_put">PUT</string>
    <string name="method_type_delete">DELETE</string>
    <string name="url_input_tip">URL:</string>
    <string name="body_type_form_data">form-data</string>
    <string name="body_type_urlencoded">x-www-form-urlencoded</string>
    <string name="body_type_raw">raw</string>
    <string name="http_url_input_hint">输入请求url</string>

    <!-- preference settings -->
    <string name="inline_preferences">inline_preferences</string>
    <string name="summary_checkbox_preference">summary_checkbox_preference</string>
    <string name="title_checkbox_preference">title_checkbox_preference</string>
    <string name="dialog_based_preferences">dialog_based_preferences</string>
    <string name="dialog_title_edittext_preference">dialog_title_edittext_preference</string>
    <string name="summary_edittext_preference">summary_edittext_preference</string>
    <string name="title_edittext_preference">title_edittext_preference</string>
    <string name="dialog_title_list_preference">dialog_title_list_preference</string>
    <string name="summary_list_preference">summary_list_preference</string>
    <string name="title_list_preference">title_list_preference</string>
    <string name="launch_preferences">launch_preferences</string>
    <string name="summary_fragment_preference">summary_fragment_preference</string>
    <string name="title_fragment_preference">title_fragment_preference</string>
    <string name="summary_intent_preference">summary_intent_preference</string>
    <string name="title_intent_preference">title_intent_preference</string>
    <string name="preference_attributes">preference_attributes</string>
    <string name="summary_parent_preference">summary_parent_preference</string>
    <string name="title_parent_preference">title_parent_preference</string>
    <string name="summary_child_preference">summary_child_preference</string>
    <string name="title_child_preference">title_child_preference</string>

</resources>