<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:background="@color/CadetBlue"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/et_account_update_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/textfield_selector"
        android:hint="@string/account_input_email_hint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/et_account_update_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/textfield_selector"
        android:hint="@string/account_input_name_hint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/et_account_update_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/textfield_selector"
        android:hint="@string/account_input_pwd_hint"
        android:inputType="textWebPassword" />

    <EditText
        android:id="@+id/et_account_update_manufacturer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/textfield_selector"
        android:hint="@string/account_input_manufacturer_hint"
        android:inputType="textVisiblePassword" />

    <EditText
        android:id="@+id/et_account_update_brand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/textfield_selector"
        android:hint="@string/account_input_brand_hint"
        android:inputType="textVisiblePassword" />

    <EditText
        android:id="@+id/et_account_update_model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/textfield_selector"
        android:hint="@string/account_input_model_hint"
        android:inputType="textVisiblePassword" />

    <EditText
        android:id="@+id/et_account_update_engine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/textfield_selector"
        android:hint="@string/account_input_engine_hint" />

    <Button
        android:id="@+id/btn_account_name_login"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/custom_btn_selector"
        android:text="@string/btn_update_tip" />

</LinearLayout>