<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rg_http_type"
    android:layout_width="fill_parent"
    android:layout_height="46dp"
    android:layout_gravity="bottom"
    android:background="@drawable/segment_def"
    android:gravity="center_vertical"
    android:orientation="horizontal" >

    <RadioButton
        android:id="@+id/rb_http_method_type_get"
        style="@style/TabItemStyle"
        android:checked="true"
        android:gravity="center"
        android:text="@string/method_type_get" />

    <RadioButton
        android:id="@+id/rb_http_method_type_post"
        style="@style/TabItemStyle"
        android:gravity="center"
        android:text="@string/method_type_post" />

    <RadioButton
        android:id="@+id/rb_http_method_type_put"
        style="@style/TabItemStyle"
        android:gravity="center"
        android:text="@string/method_type_put" />
    
    <RadioButton
        android:id="@+id/rb_http_method_type_delete"
        style="@style/TabItemStyle"
        android:gravity="center"
        android:text="@string/method_type_delete" />

</RadioGroup>