<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rg_http_type"
    android:layout_width="fill_parent"
    android:layout_height="46dp"
    android:layout_gravity="bottom"
    android:background="@drawable/segment_def"
    android:gravity="center_vertical"
    android:orientation="horizontal" >

    <RadioButton
        android:id="@+id/rb_http_type_form"
        style="@style/TabItemStyle"
        android:checked="true"
        android:gravity="center"
        android:text="@string/body_type_form_data" />

    <RadioButton
        android:id="@+id/rb_http_type_urlencoded"
        style="@style/TabItemStyle"
        android:gravity="center"
        android:text="@string/body_type_urlencoded" />

    <RadioButton
        android:id="@+id/rb_http_type_raw"
        style="@style/TabItemStyle"
        android:gravity="center"
        android:text="@string/body_type_raw" />

</RadioGroup>