<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:background="@drawable/nav_bar_bg" >

        <Button
            android:id="@+id/btn_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:background="@drawable/nav_back_selector" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/api_other"
            android:textColor="@color/Grey"
            android:textSize="@dimen/font_size_xlarge" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_other_config"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_margin="10dp"
        android:background="@drawable/custom_btn_selector"
        android:text="@string/btn_config_tip" />

    <Button
        android:id="@+id/btn_other_feedback"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_margin="10dp"
        android:background="@drawable/custom_btn_selector"
        android:text="@string/btn_feedback_tip" />

    <TextView
        android:id="@+id/tv_other_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:scrollbars="vertical"
        android:singleLine="false"
        android:textColor="@color/Grey"
        android:textIsSelectable="false"
        android:textSize="@dimen/font_size_small" />

</LinearLayout>