<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:background="@drawable/nav_bar_bg" >

        <Button
            android:id="@+id/btn_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:background="@drawable/nav_back_selector" />

        <TextView
            android:id="@+id/tv_http_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/api_http"
            android:textColor="@color/Grey"
            android:textSize="@dimen/font_size_xlarge" />

        <Button
            android:id="@+id/btn_http_submit"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:background="@drawable/nav_btn_selector"
            android:text="submit" />
    </RelativeLayout>

    <include
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        layout="@layout/http_method_type_segment" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:text="@string/url_input_tip"
            android:textColor="@color/LimeGreen" />

        <EditText
            android:id="@+id/et_http_url"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/textfield_selector"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/http_url_input_hint"
            android:inputType="textUri" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <include
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/http_body_type_segment" />

</LinearLayout>